namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odds-shop-dev
  labels:
    name: odds-shop-dev
    module: Namespace
