ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odds-shop
  namespace: odds-shop-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.odds-shop.team
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odds-shopgw
            port:
              number: 80
  - host: www.odds-shop.team
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odds-shopweb
            port:
              number: 8080
